# Engine

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt  lefthook.yml  vcpkg.json
.github/workflows/: build.yml  format.yml  lint.yml
scripts/: build.sh  format.sh  lint.sh  run.sh
src/: main.cpp
